--- a/Last/last.css
+++ b/Last/last.css
@@ -10,10 +10,6 @@ html {
   margin-right: 100px; 
   margin-left: 100px;
 }
-/*body {
-  border-left: solid 40px #862D2D;
-  border-right: solid 40px #862D2D;
-}
 
 /********** Header *********/
 
@@ -29,17 +25,13 @@ header {
   background-image: url(images/bigtotoro.png);
   background-position: 7%;
   background-repeat: no-repeat;
-  /*background-image: url(images/arches.png);
-  /*background-image: url(images/geometric-shape.png);
-  background-position: bottom right; 
-  background-repeat: no-repeat;*/
 } 
 
 /********* Main content *********/
 
 #main-content {
   background-color: #336699;
-  background-image: url(images/food.png);/*url(images/geolines1000.png)*/
+  background-image: url(images/food.png);
   background-position: 50%;
 }
 .title {
@@ -67,7 +59,7 @@ header {
   display: table;
 }
 p {
-  padding: 10px 10px 10px 10px;
+  padding: 20px 10px 20px 10px;
   width: 100%;
   height: 100%;
   display: table-cell;
@@ -79,13 +71,14 @@ p {
 h5 {
   border-radius: 50px;		
   text-align: center;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   width: 80px;
   height: 80px;
   padding-top: 30px;
   margin-left: 4px;
   margin-top: 25px;
   color: white;
+  cursor: pointer;
 }
 .p1 {
   background-color: #993366;
@@ -96,8 +89,18 @@ h5 {
 .p3 {
   background-color: #993399;
 }
+#p1 {
+  line-height: 2.3;
+}
+#p2 {
+  line-height: 1.67;
+}
+#p3 {
+  text-indent: 0px;
+  line-height: 1.9;
+}
 #intro {
-  background-color: #86862D;
+  background-color: #BFBF40; #86862D;
   border-radius: 5px;
   width: 90%;
   height: 150px;
@@ -106,13 +109,28 @@ h5 {
   margin-bottom: 25px;
   color: #292929;
   display: table;
+  vertical-align: middle;
 }
 .capital {
   font-size: 1.8em; 
   letter-spacing: 3px;
   color: #663399;
 }
-
+#thank-you-button {
+  border-radius: 50px;    
+  text-align: center;
+  letter-spacing: 1px;
+  width: 80px;
+  height: 80px;
+  padding-top: 10px;
+  margin-right: 4px;
+  margin-top: 25px;
+  color: white;
+  cursor: pointer;
+  color: white;
+  background-color: #663399;
+  border: none;
+}
 /********* Footer ********/
 
 footer {
@@ -190,11 +208,6 @@ footer {
   }
   .col-md-12 {
     width: 100%;
-    /* width: 105.5%;
-    position: relative;
-    right: 25px;
-    top: 25px; 
-    margin-bottom: 50px;*/
   }
   .title {
     font-size: 2.8em;
@@ -202,10 +215,6 @@ footer {
   header {
     background-image: url(images/totorosmall.png);
   }
-  /*body {
-    border-left: solid #862D2D 25px;
-    border-right: solid #862D2D 25px;
-  }*/
 }
 
 /********* Small devices only *********/
@@ -222,10 +231,6 @@ footer {
     font-size: 1.7em;
     padding-top: 30px;
   }
-  /*body {
-    border-left: solid #862D2D 10px;
-    border-right: solid #862D2D 10px;
-  }*/
 }
 
 /********* Extra small devices only *********/
@@ -238,10 +243,6 @@ footer {
   header {
     background-image: url(images/totoro.png);
   }
-  /*body {
-    border-right: solid #862D2D 5px;
-    border-left: solid #862D2D 5px;
-  }*/
   .capital {
     font-size: 1.1em;
   }
@@ -252,10 +253,3 @@ footer {
 }
 
 /******* Ridiculously small devices only *******/
-/*
-@media (max-width: 381px) {
-  .title {
-    font-size: 10px;
-    padding-top: 30px;
-  }
-}*/
